  We have interesting ideas of we what we do with Shoes that maybe very difficult
  to immplememt in Shoes 4. 
  
-------------- Shoes 3.3.2 ----------------------------------

=== New with 3.3.2
  * Profiler with both a GUI and the more traditional text report.
    Written in Shoes and Ruby so you can modify it if you like. 
    https://github.com/Shoes3/shoes3/issues/232
  * Shoes.show_console is now Shoes.terminal with many options for size, and
    colors. It can handle some common escape sequences (colors and bolding)  
    On Windows:
      Use Msys>  cshoes.exe
      or install one of those ANSI dll things for your DOS era console. 
      Rumor: Win 10 does support ansi escape sequences on it's console.
      Sometimes Win7 does ok with some escape sequence. 
    Useful for running unit tests of Shoes and other terminal stuff like the
    profiler text report.
    https://github.com/Shoes3/shoes3/issues/236
  * exit should no long be used. Please use Shoes.quit
    https://github.com/Shoes3/shoes3/issues/263

=== Fixed with 3.3.2
  * A new launch script for OSX (cshoes) that works like Linux and Windows
    from the command line. Use Cobbler to create you osx cshoes script.
  * Windows: bug261 - fix font loading
    https://github.com/Shoes3/shoes3/issues/261
  * debugging with byebug is much better.
    https://github.com/Shoes3/shoes3/issues/263
    https://github.com/Shoes3/shoes3/wiki/Debugging-with-Byebug
    

=== Developer isssues for 3.3.2
  * no improvements per se although I consider the byebug and osx cshoes major
    improvements for Shoes internals developers
----------------------------------------------------------
  
=== New with 3.3.1
  * Video widget. If you have VLC installed, Shoes will find it (and
    you can tell Shoes where your VLC is). Once found, you can use it. 
    You can not package VLC with you script however. 
    https://github.com/Shoes3/shoes3/issues/133
    Caution: may not work on OSX < 10.10