@@ -13,6 +13,8 @@
   * Profiler with both a GUI and the more traditional text report.
     Written in Shoes and Ruby so you can modify it if you like. 
     https://github.com/Shoes3/shoes3/issues/232
+    https://github.com/Shoes3/shoes3/wiki/Profiling
+    
   * Shoes.show_console is now Shoes.terminal with many options for size, and
     colors. It can handle some common escape sequences (colors and bolding)  
     On Windows:
@@ -22,7 +24,9 @@
       Sometimes Win7 does ok with some escape sequence. 
     Useful for running unit tests of Shoes and other terminal stuff like the
     profiler text report.
+    Note: raspbian may have font issues for 'monospace' font.
     https://github.com/Shoes3/shoes3/issues/236
+    
   * exit should no long be used. Please use Shoes.quit
     https://github.com/Shoes3/shoes3/issues/263
 
